0032860: Coding Rules, Extrema_GenExtPS - add exported destructor

Added eplicit destructors to classes Extrema_GenExtCS, Extrema_GenExtPS and Extrema_GenExtSS.